ajout light and dark mode

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div class=" chat-container h-[85vh] flex flex-col bg-slate-200 from-indigo-500 via-purple-500 to-blue-500" >
+<div class=" chat-container h-[85vh] flex flex-col dark:text-white dark:bg-gray-900 bg-slate-200 from-indigo-500 via-purple-500 to-blue-500" >
   <!-- Chat Header -->
   <div class="chat-header bg-gradient-to-r from-blue-600 to-indigo-600 text-white p-4 shadow-lg">
     <h2 class="text-lg ">Bonjour, comment puis-je vous aider ?</h2>
