--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -18,10 +18,8 @@
       <div class="flex items-center space-x-4">
         
         <!-- Notifications Button -->
-        <button class="relative text-gray-400 hover:text-white focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800 p-2 rounded-full">
-          <svg class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-          </svg>
+        <button (click)="toggleDarkMode()" class="p-2 rounded-md text-gray-400 dark:text-gray-300 hover:text-white text-2xl">
+          <fa-icon [icon]="isDarkMode ? faMoon : faSun"></fa-icon>
         </button>
 
         <!-- Profile dropdown -->
